--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,16 +1,12 @@
-FROM node:18-alpine
+FROM node:20-alpine
 
 WORKDIR /app
 
-# Instalar dependencias
 COPY package*.json ./
 RUN npm install
 
-# Copiar código fuente
 COPY . .
 
-# Exponer puerto
 EXPOSE 5000
 
-# Comando por defecto
-CMD ["npm", "run", "dev"]
+CMD ["node", "--watch", "server.js"]
