--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,28 +1,12 @@
-# backend/Dockerfile.dev
-FROM node:18-alpine
-
-# Instalar herramientas para desarrollo
-RUN apk add --no-cache git
+FROM node:20-alpine
 
 WORKDIR /app
 
-# Variables de entorno para desarrollo
-ENV NODE_ENV=development
-
-# Copiar package.json primero
 COPY package*.json ./
-
-# Instalar dependencias incluyendo devDependencies
 RUN npm install
 
-# Instalar nodemon globalmente si no está en package.json
-RUN npm install -g nodemon
-
-# Copiar código fuente
 COPY . .
 
-# Exponer puertos (app y debugging)
-EXPOSE 5000 9229
+EXPOSE 5000
 
-# Comando con nodemon para hot reload
-CMD ["npm", "run", "dev"]
+CMD ["node", "--watch", "server.js"]
