--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,10 +12,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^7.6.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
     "joi": "^17.13.3",
-    "mongoose": "^8.0.0"
+    "express-validator": "^7.0.1"
   }
 }
