--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,13 +10,21 @@ http {
 
     sendfile        on;
 
+    upstream frontend_app {
+        server frontend:3000;
+    }
+
+    upstream backend_app {
+        server backend:5000;
+    }
+
     server {
         listen 80;
 
         server_name localhost;
 
         location / {
-            proxy_pass http://frontend:3000;
+            proxy_pass http://frontend_app;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -25,7 +33,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://backend:5000/api/;
+            proxy_pass http://backend_app;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
