--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.6.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "joi": "^17.13.3",
-    "express-validator": "^7.0.1"
+    "mongoose": "^7.6.3",
+    "multer": "^1.4.5-lts.1"
   }
 }
