--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,12 @@ services:
       - "27017:27017"
     volumes:
       - mongodb_data:/data/db
+    healthcheck:
+      test: ["CMD", "mongosh", "--quiet", "--eval", "db.adminCommand('ping')"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
 
   backend:
     build:
@@ -18,9 +24,11 @@ services:
       - ./backend:/app
       - /app/node_modules
     depends_on:
-      - mongo
+      mongo:
+        condition: service_healthy
     environment:
       - MONGO_URI=mongodb://mongo:27017/autosalpiso
+    restart: unless-stopped
 
   frontend:
     build:
@@ -28,23 +36,18 @@ services:
       dockerfile: Dockerfile.dev
     container_name: autoal-piso-frontend
     ports:
-      - "3000:3000"
+      - "3000:5173"
     volumes:
       - ./frontend:/app
       - /app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+      - WATCHPACK_POLLING=true
+      - FAST_REFRESH=true
+      - HOST=0.0.0.0
+    restart: unless-stopped
     stdin_open: true
     tty: true
-
-  nginx:
-    image: nginx:alpine
-    container_name: autoal-piso-nginx
-    ports:
-      - "80:80"
-    depends_on:
-      - frontend
-      - backend
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
 
 volumes:
   mongodb_data:
