--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -2,13 +2,16 @@ FROM node:20-alpine
 
 WORKDIR /app
 
+ENV CHOKIDAR_USEPOLLING=true
+ENV WATCHPACK_POLLING=true
+ENV FAST_REFRESH=true
+ENV HOST=0.0.0.0
+
 COPY package*.json ./
 RUN npm install
-
-ENV PATH=/app/node_modules/.bin:$PATH
 
 COPY . .
 
 EXPOSE 3000
 
-CMD ["vite", "--host", "0.0.0.0"]
+CMD ["npm", "run", "dev"]
