--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,44 +1,31 @@
-worker_processes 1;
-
-events {
-    worker_connections 1024;
-}
+worker_processes  1;
+events { worker_connections 1024; }
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
+  resolver 127.0.0.11 valid=30s ipv6=off;
 
-    sendfile        on;
+  upstream frontend {
+    server frontend:3000 resolve;
+  }
+  upstream backend {
+    server backend:5000;
+  }
 
-    upstream frontend_app {
-        server frontend:3000;
+  server {
+    listen 80;
+
+    location /api/ {
+      proxy_pass         http://backend;
+      proxy_http_version 1.1;
+      proxy_set_header   Connection "";
+      proxy_set_header   Host $host;
     }
 
-    upstream backend_app {
-        server backend:5000;
+    location / {
+      proxy_pass         http://frontend;
+      proxy_http_version 1.1;
+      proxy_set_header   Connection "";
+      proxy_set_header   Host $host;
     }
-
-    server {
-        listen 80;
-
-        server_name localhost;
-
-        location / {
-            proxy_pass http://frontend_app;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        location /api/ {
-            proxy_pass http://backend_app;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-    }
+  }
 }
